--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,12 +8,8 @@
     <nav class="app-footer-links">
       <span>Find me on: </span>
 
-      <a
-        href="https://www.reddit.com/user/Besaids/"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        Reddit User
+      <a href="https://www.reddit.com/user/Besaids/" target="_blank" rel="noopener noreferrer">
+        Reddit
       </a>
 
       <a
@@ -21,7 +17,7 @@
         target="_blank"
         rel="noopener noreferrer"
       >
-        Discord User
+        Discord
       </a>
 
       <a
